--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9356,3 +9356,34 @@ Pages - My Account
 	transition: all 0.5s;
   z-index: 99;
 }
+
+.quantity-price{
+  display: flex !important;
+  align-items: center;
+}
+
+.quantity-price form {
+  width: 30%;
+  margin-right: 5px;
+}
+
+#orderModal .modal-dialog {
+  max-width: 600px !important;
+}
+
+#orderModal .cart-btn-2 {
+  background: #eaaa85;
+  border-radius: 0px;
+  color: #fff;
+  display: inline-block;
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 1;
+  padding: 18px 30px;
+  text-transform: uppercase;
+}
+
+.btn_center {
+  display: flex;
+  justify-content: space-around;
+}
